Bug 95729 - Autofilter buttons All, OK and Cancel do not show the accelerators
Summary: Autofilter buttons All, OK and Cancel do not show the accelerators
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-11-10 12:45 UTC by Cor Nouws
Modified: 2016-10-25 18:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-11-10 12:45:00 UTC
All and OK and Cancel have A, O and C as accelerators (anyway, they work ;) ) but those are not visible

(follow up from issue 94908)
Comment 1 Cor Nouws 2015-11-10 12:45:48 UTC
thanks!
Comment 2 Adolfo Jayme Barrientos 2015-11-16 07:53:13 UTC
IIRC there’s this thing that drops accelerator underlines from displaying in a per-platform basis. This was intended for OS X (where it’s correct), but I believe Windows has a similar hack to avoid the underlines from displaying in OK/Cancel (which makes no sense, since the rest of buttons *do* display them).
Comment 3 Cor Nouws 2015-11-16 08:18:35 UTC
Just to be clear: the accelerators are not show also if Alt is hold.
Comment 4 Dennis Francis 2015-11-27 12:21:50 UTC
For the following version, All, Ok, Cancel buttons have accelerators visible by default. Should this bug be marked as regression ?

Version: 5.0.3.2
Build ID: 5.0.3.2-4.fc23
Locale: en-US (en_US.utf8)
OS : Fedora 23 64 bit.


Noticed that in current master, the UIs created with VclBuilder does not have this issue. ( Auto filter UI is created manually without VclBuilder. )

I tried to figure out the issue by looking at the autofilter ui related code from 5.0 and I could not see any change that could cause this issue, so I feel that something has changed in VCL or accessibility libraries that needs a corresponding change for UI that is created without VclBuilder. So may need inputs from VCL experts.
Comment 5 Cor Nouws 2015-11-28 12:01:00 UTC
(In reply to Dennis Francis (ldcs.co.in) from comment #4)
> For the following version, All, Ok, Cancel buttons have accelerators visible
> by default. Should this bug be marked as regression ?

Eh..  yes

> Version: 5.0.3.2
> Build ID: 5.0.3.2-4.fc23
> Locale: en-US (en_US.utf8)
> OS : Fedora 23 64 bit.
> 
> 
> Noticed that in current master, the UIs created with VclBuilder does not
> have this issue. ( Auto filter UI is created manually without VclBuilder. )

Current daily that I have indeed doesn't yet show it.
Version: 5.2.0.0.alpha0+
Build ID: 4f088f78050ec1c831b31b3bf3d4e8d5197c7daa
Threads 2; Ver: 4.2; Render: default; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2015-11-27_18:19:18
Locale: nl-NL (nl_NL.UTF-8)
Comment 6 raal 2015-12-02 09:44:36 UTC
Tested on windows - All have accelerator, OK and Cancel doesn't.
LO 5.0.3.2, and Version: 4.5.0.0.alpha0+
Build ID: 57d6b92b69a31260dea0d84fcd1fc5866ada7adb
Comment 7 Katarina Behrens (Inactive) 2016-02-03 21:35:32 UTC
Gtk-, maybe Windows-only issue, can't repro w/ KDE UI

Possible regression from 74407aef94b6d8dfdd69891c4a6e578587ef3e71
Comment 8 Cor Nouws 2016-02-04 13:22:38 UTC
(In reply to Katarina Behrens (CIB) from comment #7)
> Gtk-, maybe Windows-only issue, can't repro w/ KDE UI

I'm on Ubuntu 32 bits.
With or Without OpenGL makes no difference.
Comment 9 Commit Notification 2016-07-11 12:26:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=545d5157f26b7fd3c5648ae6e727b1e1addca68f

Resolves: tdf#95729 move 'alt' accel enable/disable down to systemwindow

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.