Resolves: tdf#95729 move 'alt' accel enable/disable down to systemwindow

from dialog and send the 'alt' to the active floating window, if there
is one, before trying the menubar.

so popups like the calc autofilter one can display their accelerators
when alt is pressed

Change-Id: I52e45b72885b1b0a7362cecc30e41d218a48a58d