vcl/source/window/winproc.cxx
@@ -2091,14 +2091,19 @@ static void ImplHandleSalKeyMod( vcl::Window* pWindow, SalKeyModEvent* pEvent )
     // Alt pressed or released => give SystemWindow a chance to handle auto-accelerator
     if ( pEvent->mnCode == KEY_MOD2 || (pEvent->mnModKeyCode & MODKEY_MOD2) != 0 )
     {
-        // find window - first look to see if the system window is available
-        pChild = pWindow->ImplGetWindowImpl()->mpFirstChild;
+        // find window - first look to see a popup is open and send it there
+        pChild = pSVData->maWinData.mpFirstFloat.get();
 
-        while ( pChild )
+        if (!pChild)
         {
-            if ( pChild->ImplGetWindowImpl()->mbSysWin )
-                break;
-            pChild = pChild->ImplGetWindowImpl()->mpNext;
+            // find window - then look to see if the system window is available
+            pChild = pWindow->ImplGetWindowImpl()->mpFirstChild;
+            while ( pChild )
+            {
+                if ( pChild->ImplGetWindowImpl()->mbSysWin )
+                    break;
+                pChild = pChild->ImplGetWindowImpl()->mpNext;
+            }
         }
     }
 
